--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CybernetCall</title>
+  <title>CyberNetCall</title>
   <link rel="manifest" href="{% static 'manifest.json' %}">
   <link rel="icon" href="icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js" defer></script>
