--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -61,7 +61,7 @@
   <section class="section">
     <h2>Direct Mail</h2>
     <input type="text" id="messageInput" placeholder="Type a message..." disabled>
-    <button id="sendMessage" disabled>Send</button>
+    <button id="sendMessage">Send</button>
     <div id="messageArea"></div>
   </section>
   
@@ -77,11 +77,11 @@
     <video id="localVideo" autoplay muted playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
     <div class="call-controls">
-      <button id="callButton" disabled>📞</button>
-      <button id="videoButton" disabled>🎥</button>
+      <button id="callButton">📞</button>
+      <button id="videoButton">🎥</button>
     </div>
-    <input type="file" id="fileInput" disabled>
-    <button id="sendFile" disabled>Send File</button>
+    <input type="file" id="fileInput">
+    <button id="sendFile">Send File</button>
   </section>
 
   <div id="qr-reader"></div>
