--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -60,7 +60,7 @@
   
   <section class="section">
     <h2>Direct Mail</h2>
-    <input type="text" id="messageInput" placeholder="Type a message..." disabled>
+    <input type="text" id="messageInput" placeholder="Type a message...">
     <button id="sendMessage">Send</button>
     <div id="messageArea"></div>
   </section>
