--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CyberNetCall</title>
   <link rel="manifest" href="{% static 'cnc/manifest.json' %}">
-  <link rel="icon" href="icon.png">
+  <link rel="icon" href="{% static 'cnc/icon.png' %}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js" defer></script>
   <script src="https://unpkg.com/idb@7/build/umd.js" defer></script>
   <script src="https://unpkg.com/html5-qrcode" defer></script>
