--- a/cnc/templates/cnc/index.html
+++ b/cnc/templates/cnc/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CyberNetCall</title>
@@ -11,6 +12,7 @@
   <!-- CSSファイルを読み込む -->
   <link rel="stylesheet" href="{% static 'cnc/style.css' %}">
   <!-- 外部ライブラリ (deferで非同期読み込み) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js" integrity="sha512-xss3FFnHvjLzqzJSGe6F9Pa7NWUyGVQirGq0/Hj+D3FN6n19r/M6+5Qk+Kmf+kQeBi9h7LuYwZSQubHwm9iYrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js" defer></script>
   <script src="https://unpkg.com/idb@7/build/umd.js" defer></script>
   <script src="https://unpkg.com/html5-qrcode" defer></script>
